Fix text overflow

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@ body
     flex: 0 0 25%;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     background-color:rgb(146, 195, 162);
 }
 
@@ -51,6 +50,7 @@ body
     flex: 0 0 25%;
     display: flex;
     flex-direction: column;
+    padding-left: 5px;
 }
 
 .logo
@@ -70,6 +70,7 @@ body
 {
     width: 150px;
     height: 150px;
+    margin: 5px;
     border: 5px solid rgb(8, 139, 95);
     border-radius: 50%;
 }
@@ -87,27 +88,29 @@ p
 {
     text-align:left;
     padding: 0;
-    margin-top: 20px;
+    margin-top: 10px;
     color: rgb(17, 139, 8);
-    font-size:32px;
+    font-size: 26px;
     font-weight: bold;
+    border-bottom: 3px solid rgb(17, 139, 8);
+
 }
 
 .information
 {
     margin: 0;
-    padding: 0 20px;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    font-size: 24px;
+    gap: 10px;
+    font-size: 20px;
     font-weight: 400;
-    color:rgb(5, 84, 58)
+    color:rgb(5, 84, 58);
 }
 
 .canvas
 {
-    height: 92%;
+    height: 90%;
     aspect-ratio: 1 / 1;
     margin: 0;
     padding: 0;
@@ -118,7 +121,7 @@ p
 
 .controls
 {
-    margin: 5px;
+    margin-top: 10px;
     display: flex;
     flex-direction:row;
     gap: 50px;
